# serializer version: 1
# name: test_platform_setup_and_discovery[cl_am43_corded_motor_zigbee_cover][select.kitchen_blinds_motor_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'forward',
        'back',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.kitchen_blinds_motor_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Motor mode',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'curtain_motor_mode',
    'unique_id': 'tuya.zah67ekdcontrol_back_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cl_am43_corded_motor_zigbee_cover][select.kitchen_blinds_motor_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Kitchen Blinds Motor mode',
      'options': list([
        'forward',
        'back',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.kitchen_blinds_motor_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'forward',
  })
# ---
# name: test_platform_setup_and_discovery[co2bj_air_detector][select.aqi_volume-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'low',
        'middle',
        'high',
        'mute',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.aqi_volume',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Volume',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'volume',
    'unique_id': 'tuya.eb14fd1dd93ca2ea34vpinalarm_volume',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[co2bj_air_detector][select.aqi_volume-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'AQI Volume',
      'options': list([
        'low',
        'middle',
        'high',
        'mute',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.aqi_volume',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'low',
  })
# ---
# name: test_platform_setup_and_discovery[cs_arete_two_12l_dehumidifier_air_purifier][select.dehumidifier_countdown-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'cancel',
        '1h',
        '2h',
        '3h',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.dehumidifier_countdown',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Countdown',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'countdown',
    'unique_id': 'tuya.bf3fce6af592f12df3gbgqcountdown_set',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cs_arete_two_12l_dehumidifier_air_purifier][select.dehumidifier_countdown-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dehumidifier Countdown',
      'options': list([
        'cancel',
        '1h',
        '2h',
        '3h',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.dehumidifier_countdown',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cancel',
  })
# ---
# name: test_platform_setup_and_discovery[cs_emma_dehumidifier][select.dehumidifer_countdown-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'cancel',
        '1h',
        '2h',
        '3h',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.dehumidifer_countdown',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Countdown',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'countdown',
    'unique_id': 'tuya.mock_device_idcountdown_set',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cs_emma_dehumidifier][select.dehumidifer_countdown-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Dehumidifer Countdown',
      'options': list([
        'cancel',
        '1h',
        '2h',
        '3h',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.dehumidifer_countdown',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[cwjwq_smart_odor_eliminator][select.smart_odor_eliminator_pro_odor_elimination_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'smart',
        'interim',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.smart_odor_eliminator_pro_odor_elimination_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Odor elimination mode',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'odor_elimination_mode',
    'unique_id': 'tuya.bf6574iutyikgwkxwork_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[cwjwq_smart_odor_eliminator][select.smart_odor_eliminator_pro_odor_elimination_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Smart Odor Eliminator-Pro Odor elimination mode',
      'options': list([
        'smart',
        'interim',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.smart_odor_eliminator_pro_odor_elimination_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
# name: test_platform_setup_and_discovery[kj_bladeless_tower_fan][select.bree_countdown-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'cancel',
        '1h',
        '2h',
        '3h',
        '4h',
        '5h',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.bree_countdown',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Countdown',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'countdown',
    'unique_id': 'tuya.CENSOREDcountdown_set',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[kj_bladeless_tower_fan][select.bree_countdown-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Bree Countdown',
      'options': list([
        'cancel',
        '1h',
        '2h',
        '3h',
        '4h',
        '5h',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.bree_countdown',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cancel',
  })
# ---
# name: test_platform_setup_and_discovery[tdq_4_443][select.4_433_power_on_behavior-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        '0',
        '1',
        '2',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'select',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'select.4_433_power_on_behavior',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Power on behavior',
    'platform': 'tuya',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'relay_status',
    'unique_id': 'tuya.bf082711d275c0c883vb4prelay_status',
    'unit_of_measurement': None,
  })
# ---
# name: test_platform_setup_and_discovery[tdq_4_443][select.4_433_power_on_behavior-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': '4-433 Power on behavior',
      'options': list([
        '0',
        '1',
        '2',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'select.4_433_power_on_behavior',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unavailable',
  })
# ---
